src/objects/Book__c.object
<CustomObject>
    <fields>
        <fullName>Book_Name_Auto__c</fullName>
        <displayFormat>Book Number {0000}</displayFormat>
        <label>Book Name Auto</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>author__c</fullName>
        <label>Author</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>date_of_issue__c</fullName>
        <label>Date Of Issue</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>date_of_return__c</fullName>
        <formula>date_of_issue__c+30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Of Return</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>edition__c</fullName>
        <label>Edition</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Book</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Books</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>